# mcp-capabilities

./: .gitignore  LICENSE
FastMCP/: README.md  pyproject.toml  requirements.txt
FastMCP/01-Ping/: README.md
FastMCP/01-Ping/src/: __init__.py  index.py  test_client.py
Python/: README.md  pyproject.toml  requirements.txt
Python/01-Ping/: README.md
Python/01-Ping/src/: __init__.py  index.py  test_client.py
Typescript/: package-lock.json  package.json  tsconfig.json
Typescript/01-Ping/: README.mdx  tsconfig.json
Typescript/01-Ping/src/: index.test.ts  index.ts  test.ts
Typescript/01-Ping/types/: reset.d.ts
